v0.1.4 (#3)
- Update Libpod API up to 5.4.0
- Add resources cleanup on JVM exit